# Switchboard

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DECISIONS.md  MISSION.md  PROVENANCE.md  README.md  SETUP.md  bootstrap.py  gate.py  pyproject.toml  query_decisions.py  rabbit_guard.py  tiers.json  worker.py
decisions/: ADR-001.json  ADR-002.json  ADR-003.json  ADR-004.json  ADR-005.json  ADR-006.json  ADR-007.json  ADR-008.json  ADR-009.json  ADR-010.json  HDR-001.json  HDR-002.json  HDR-003.json  HDR-004.json  HDR-005.json  HDR-006.json  HDR-007.json  HDR-008.json  HDR-009.json  HDR-010.json  HDR-011.json  HDR-012.json
deploy/: switchboard@.service
docs/: ROADMAP.md
examples/: review-brief-PLAN-031-PH-1.md  task-PLAN-031-PH-2-T-2.json
hooks/: after_create.sh  after_run.sh  before_run.sh  com.switchboard.monitor.plist.example  sb_guard.py  sb_monitor.py  sb_notify.py  sb_quota.py  settings.example.json
methodology/: METHODOLOGY.md
orchestrator/: pyproject.toml
plans/: PLAN-031.json
sb/: brief.py  channels.py  claims.py  cli.py  dag.py  digest.py  leases.py  loopledger.py  notify.py  paths.py  query.py  resolve.py  results.py  seed.py  spawn.py  stamp.py  store.py  validate.py
schemas/: decision-record.schema.json  digest.schema.json  plan.schema.json  result.schema.json  task.schema.json
scripts/: codex-circuit-canary.sh  list-projects.sh  new-ticket.sh  provision-mixed-canary-labels.sh  register-project.sh  run-mixed-canary-checkpoint.sh  run-project.sh  run-stage7-circuit-canary.sh  verify-setup.sh
spec/: PROVENANCE.md  SPEC.md
tests/: conftest.py  (+29 more)
(+143 files in other folders)
