[project]
name = "switchboard"
version = "0.2.0"
description = "Switchboard sb engine: deterministic file-queue orchestration"
requires-python = ">=3.11"
dependencies = ["jsonschema>=4.21"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
sb = "sb.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
